--- a/public/index.html
+++ b/public/index.html
@@ -9,9 +9,12 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=DM+Sans&family=Source+Code+Pro:wght@200;300;400&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=DM+Sans&family=Source+Code+Pro:wght@200;300;400&display=swap"
+      rel="stylesheet"
+    />
     <title>The Shop at Redpoint</title>
   </head>
   <body>
